# bootstrap

./: .gitignore  Makefile.am  configure.ac
img/: Makefile.am
js/: Makefile.am
less/: Makefile.am  pager.less  pagination.less  variables.less
